test/Dialect/Array/array_len_fail.llzk
// RUN: llzk-opt %s -split-input-file -verify-diagnostics

function.def @only_one_index() -> index {
  %a = array.new : !array.type<2,3 x !felt.type>
  %0 = arith.constant 0 : index
  // expected-error@+1 {{expected ':'}}
  %x = array.len %a, %0, %0 : !array.type<2,3 x !felt.type>
  function.return %x: index
}
// -----

function.def @not_array_type_01(%a: !felt.type) -> index { // expected-note {{prior use here}}
  %0 = arith.constant 0 : index
  // expected-error@+1 {{use of value '%a' expects different type than prior uses: '!array.type<2,3 x !felt.type>' vs '!felt.type'}}
  %x = array.len %a, %0 : !array.type<2,3 x !felt.type>
  function.return %x: index
}
// -----

function.def @not_array_type_02(%a: !felt.type) -> index {
  %0 = arith.constant 0 : index
  // expected-error@+1 {{custom op 'array.len' invalid kind of Type specified}}
  %x = array.len %a, %0 : !felt.type
  function.return %x: index
}
// -----

function.def @wrong_result_type(%a: !array.type<2,3 x !felt.type>) -> i1 {
  %0 = arith.constant 0 : index
  %x = array.len %a, %0 : !array.type<2,3 x !felt.type> // expected-note {{prior use here}}
  // expected-error@+1 {{use of value '%x' expects different type than prior uses: 'i1' vs 'index'}}
  function.return %x: i1
}
// -----

function.def @wrong_index_type(%a: !array.type<2,3 x !felt.type>) -> index {
  %0 = felt.const 0 // expected-note {{prior use here}}
  // expected-error@+1 {{use of value '%0' expects different type than prior uses: 'index' vs '!felt.type'}}
  %x = array.len %a, %0 : !array.type<2,3 x !felt.type>
  function.return %x: index
}
// -----

function.def @out_of_bounds_constant_dim() -> index {
  // expected-note@+1 {{array defined here}}
  %a = array.new : !array.type<2,3 x !felt.type>
  %0 = arith.constant 2 : index
  // expected-error@+1 {{dimension index 2 is out of bounds for array rank 2}}
  %x = array.len %a, %0 : !array.type<2,3 x !felt.type>
  function.return %x: index
}
// -----

function.def @negative_constant_dim() -> index {
  // expected-note@+1 {{array defined here}}
  %a = array.new : !array.type<2,3 x !felt.type>
  %0 = arith.constant -1 : index
  // expected-error@+1 {{dimension index -1 is out of bounds for array rank 2}}
  %x = array.len %a, %0 : !array.type<2,3 x !felt.type>
  function.return %x: index
}
